<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- ScrollView can only have 1 direct child-node //-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/credits"
                android:autoLink="web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            />         
            
            <!-- a 10dp vertical gap //-->
            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/credits_translator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            />       
            <TextView
                android:text="@string/credits_translator_names"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            />   
        </LinearLayout>                
    </ScrollView>

</LinearLayout>